--- a/scss/partials/_featured.scss
+++ b/scss/partials/_featured.scss
@@ -79,6 +79,7 @@
     }
 
     &__title {
+      color: inherit;
       margin-bottom: 2rem;
     }
 
